test: strengthen tool safety and final answer characterization